@@ -44,6 +44,7 @@ endif::[]
 
 - Support for gRPC using the `grpc` gem (Experimental) {pull}669[#669]
 - Add `span.context.destination.address` and `span.context.destination.port` when available. {pull}722[#722]
+- Add support for Resque. {pull}729[#729]
 
 [float]
 ===== Changed
